Added the model trainer

--- a/Notebooks/model_training.ipynb
+++ b/Notebooks/model_training.ipynb
@@ -1977,7 +1977,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 26,
       "id": "4jvMeJG1bE7S",
       "metadata": {
         "colab": {
@@ -2000,20 +2000,20 @@
             "\n",
             "Sample Input Data:\n",
             "   Type  Air_temperature_K  Process_temperature_K  Rotational_speed_rpm  \\\n",
-            "0     1              301.5                  310.8                  1500   \n",
+            "0     1              301.5                  310.8                  1000   \n",
             "\n",
             "   Torque_Nm  Tool_wear_min  \n",
-            "0       55.3            108  \n",
+            "0         40             18  \n",
             "\n",
             "Scaled Sample Input Data:\n",
             "   Type  Air_temperature_K  Process_temperature_K  Rotational_speed_rpm  \\\n",
-            "0   0.5           0.673913                0.62963          2.595570e+13   \n",
+            "0   0.5           0.673913                0.62963          1.730197e+13   \n",
             "\n",
             "   Torque_Nm  Tool_wear_min  \n",
-            "0   0.707418       0.426877  \n",
+            "0   0.497253       0.071146  \n",
             "\n",
             "--------------------\n",
-            "  PREDICTION RESULT: Power Failure\n",
+            "  PREDICTION RESULT: Random Failures\n",
             "--------------------\n"
           ]
         }
@@ -2037,9 +2037,9 @@
         "        'Type': 1, # Corresponds to 'M' type\n",
         "        'Air_temperature_K': 301.5,\n",
         "        'Process_temperature_K': 310.8,\n",
-        "        'Rotational_speed_rpm': 1500,\n",
-        "        'Torque_Nm': 55.3,\n",
-        "        'Tool_wear_min': 108\n",
+        "        'Rotational_speed_rpm': 1000,\n",
+        "        'Torque_Nm': 40,\n",
+        "        'Tool_wear_min': 18\n",
         "    }])\n",
         "\n",
         "    print(\"\\nSample Input Data:\")\n",
