Delted the model file

--- a/Deep learning/model.ipynb
+++ b/Deep learning/model.ipynb
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4b04f5e3",
    "metadata": {},
    "outputs": [
@@ -1622,25 +1622,7 @@
       "66  Heat Dissipation Failure  Heat Dissipation Failure    Correct\n",
       "67         Tool Wear Failure         Tool Wear Failure    Correct\n",
       "68           Random Failures           Random Failures    Correct\n",
-      "69        Overstrain Failure        Overstrain Failure    Correct\n",
-      "\n",
-      "============================================================\n",
-      "      PREDICTING ON A NEW SAMPLE\n",
-      "============================================================\n",
-      "\n",
-      "Successfully loaded scaler.\n",
-      "Successfully loaded MLP model and set to evaluation mode.\n",
-      "\n",
-      "Sample Input Data:\n",
-      "   Type  Air temperature [K]  Process temperature [K]  Rotational speed [rpm]  \\\n",
-      "0     1                301.5                    310.8                    1000   \n",
-      "\n",
-      "   Torque [Nm]  Tool wear [min]  \n",
-      "0           40               18  \n",
-      "\n",
-      "--------------------\n",
-      "  PREDICTION RESULT: Overstrain Failure\n",
-      "--------------------\n"
+      "69        Overstrain Failure        Overstrain Failure    Correct\n"
      ]
     }
    ],
@@ -2032,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "8bea7b64",
    "metadata": {},
    "outputs": [
@@ -2050,10 +2032,10 @@
       "\n",
       "Sample Input Data:\n",
       "   Type  Air temperature [K]  Process temperature [K]  Rotational speed [rpm]  \\\n",
-      "0     1                  321                    120.4                    2500   \n",
+      "0     3                  100                    120.4                    1500   \n",
       "\n",
       "   Torque [Nm]  Tool wear [min]  \n",
-      "0         60.8               10  \n",
+      "0         40.8              108  \n",
       "\n",
       "--------------------\n",
       "  PREDICTION RESULT: Overstrain Failure\n",
@@ -2089,12 +2071,12 @@
     "    print(f\"Successfully loaded {best_model_name} model and set to evaluation mode.\")\n",
     "\n",
     "    sample_input = pd.DataFrame([{\n",
-    "        'Type': 1, \n",
-    "        'Air temperature [K]': 321,\n",
+    "        'Type': 3, \n",
+    "        'Air temperature [K]': 100,\n",
     "        'Process temperature [K]': 120.4,\n",
-    "        'Rotational speed [rpm]': 2500,\n",
-    "        'Torque [Nm]': 60.8,\n",
-    "        'Tool wear [min]': 10\n",
+    "        'Rotational speed [rpm]': 1500,\n",
+    "        'Torque [Nm]': 40.8,\n",
+    "        'Tool wear [min]': 108\n",
     "    }])\n",
     "    print(\"\\nSample Input Data:\")\n",
     "    print(sample_input)\n",
